# xml.c

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  changes.md  code_review.md
.github/workflows/: ci.yaml
docs/: code_changes_before_after.md  issues.md  original_code_issues.md  programming_style.md  quick_start.md  quick_start_tests.md  test_gap_analysis.md  test_spec.md  testable_issues_priority.md  xml_api.md
example/: CMakeLists.txt  example.c  example2.c
scripts/: doxygen_xml_to_md.py
src/: xml.c  xml.h  xml_common.h
test/: CMakeLists.txt  example.c  test-huitre39.c  test_main.c  test_runner.h  unit-c-ampersand-reject.c  unit-c-cdata.c  unit-c-compliance.c  unit-c-doctype.c  unit-c-encoding.c  unit-c-entities.c  unit-c-name-production.c  unit-c-namespace.c  unit-c-null.c  unit-c-pi.c  unit-c-string-clone.c  unit-c-unique-attributes.c  unit-c.c  wrap_realloc.c
test/input/: test-attributes-0.xml  test-attributes-1.xml  test-attributes-2.xml  test.xml
